# ConstructHub

./: .gitignore  APPROVAL_REQUEST_SYSTEM.md  ARCHITECTURE_DIAGRAMS.md  COMPLETION_REPORT.md  DATA_FETCHING_FIX_SUMMARY.js  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README_APPROVAL_SYSTEM.md  README_AUTH.md  package-lock.json  package.json  script_check_db.js  script_signin_test.js  temp_query.sql  test-api.js  test-db-connection.ts  test-delete.js  test-read-write.ts  test_endpoints.js  tsconfig.tsbuildinfo  vercel.json  verify-api.js
ai_service/: main.py  (+1 more)
modules/Safety-Detection-And-Productivity-Analysis/: README.md  Start-Project.bat  Start-Project.ps1  Stop-Project.bat  Stop-Project.ps1  package-lock.json  package.json  pyproject.toml  requirements.txt
modules/Safety-Detection-And-Productivity-Analysis/backend/: local_server.py
modules/Safety-Detection-And-Productivity-Analysis/safety_module/: __init__.py  engine.py  pose_metrics.py  schemas.py  settings.py  video_io.py
modules/Safety-Detection-And-Productivity-Analysis/safety_module/api/: app.py  routes.py
modules/Safety-Detection-And-Productivity-Analysis/scripts/: serve-build.js
modules/Safety-Detection-And-Productivity-Analysis/src/: index.css  index.js  theme.js
modules/Safety-Detection-And-Productivity-Analysis/src/components/: Header.jsx  LineChart.jsx  ProgressCircle.jsx  StatBox.jsx
modules/Safety-Detection-And-Productivity-Analysis/src/scenes/bar/: index.jsx
modules/Safety-Detection-And-Productivity-Analysis/src/utils/: analysisData.js
(+144 files in other folders)
