[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-module"
version = "0.1.0"
description = "Reusable construction safety and productivity video analysis package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask==3.1.3",
  "flask-cors==6.0.2",
  "mediapipe==0.10.21",
  "numpy==1.26.4",
  "opencv-contrib-python==4.11.0.86",
  "requests==2.33.1",
  "ultralytics==8.4.48",
]

[tool.setuptools.packages.find]
include = ["safety_module*"]
